k8s/base/nodeports.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-node-port
spec:
  type: NodePort
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      nodePort: 32000
  selector:
    component: postgres
